Fix spacing in chips and labels

--- a/src/components/_chip.scss
+++ b/src/components/_chip.scss
@@ -41,7 +41,7 @@ $eve-chip-border-radius: $eve-chip-height / 2 !default;
         display: flex;
         align-items: center;
         justify-content: center;
-        margin-left: $eve-spacing-tiny;
+        margin-left: $eve-spacing-x-tiny;
         cursor: pointer;
         border-radius: 100%;
 
